--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-<title>Example App</title>
+  <link rel="stylesheet" href="css/something.css">
 </head>
 <body>
-  hello world
+  <div id="container"></div>
+  <script src="configure.js"></script>
 </body>
 </html>
