--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
   <div id="container"></div>
-  <script src="configure.js"></script>
+  <script src="stats.js"></script>
 </body>
 </html>
