--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" href="css/something.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div id="container"></div>
